---
source: src/syntax/test.rs
expression: parse(src).unwrap()
---
Letrec {
    bindings: [
        LetBinding {
            name: "f",
            ann: None,
            val: Lambda {
                params: [
                    Param {
                        name: "x",
                        ann: None,
                    },
                ],
                body: App {
                    func: Var {
                        name: "f",
                    },
                    arg: Var {
                        name: "x",
                    },
                },
            },
        },
    ],
    body: Var {
        name: "f",
    },
}
